--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -16,6 +16,11 @@ services:
     depends_on:
       - db
     image: blockscout/blockscout:${DOCKER_TAG:-latest}
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
     build:
       context: ..
       dockerfile: ./docker/Dockerfile
