--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -7,9 +7,9 @@ ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8545/
 # ETHEREUM_JSONRPC_FALLBACK_TRACE_URL=
 # ETHEREUM_JSONRPC_HTTP_TIMEOUT=
 NETWORK=
-SUBNETWORK=HUB-Mainnet
-LOGO=/images/oasys-logo_inline.png
-LOGO_FOOTER=/images/oasys-logo_inline.png
+SUBNETWORK=DeFiVerse
+LOGO=/images/oasys_sentence_logo.png
+LOGO_FOOTER=/images/blockscout_logo.svg
 # ETHEREUM_JSONRPC_WS_URL=
 ETHEREUM_JSONRPC_TRANSPORT=http
 ETHEREUM_JSONRPC_DISABLE_ARCHIVE_BALANCES=false
