--- a/docker-compose/services/docker-compose-db.yml
+++ b/docker-compose/services/docker-compose-db.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   db:
     image: postgres:14
+    platform: linux/x86_64
     restart: always
     container_name: 'postgres'
     command: postgres -c 'max_connections=200'
