--- a/docker-compose/services/docker-compose-frontend.yml
+++ b/docker-compose/services/docker-compose-frontend.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   frontend:
     image: ghcr.io/blockscout/frontend:${FRONTEND_DOCKER_TAG:-latest}
+    platform: linux/x86_64
     pull_policy: always
     restart: always
     container_name: 'frontend'
