--- a/docker-compose/services/docker-compose-redis.yml
+++ b/docker-compose/services/docker-compose-redis.yml
@@ -2,7 +2,8 @@ version: '3.8'
 
 services:
   redis_db:
-    image: 'redis:alpine'
+    # image: 'redis:alpine'
+    image: 'redis'
     ports:
       - 6379:6379
     container_name: redis_db
