--- a/docker-compose/services/docker-compose-sig-provider.yml
+++ b/docker-compose/services/docker-compose-sig-provider.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   sig-provider:
     image: ghcr.io/blockscout/sig-provider:${SIG_PROVIDER_DOCKER_TAG:-latest}
+    platform: linux/x86_64
     pull_policy: always
     restart: always
     container_name: 'sig-provider'
